tests/src/frontend/typechecking/invalid/mutable_lambda_3.sk
// mutable lambdas not allowed in constants
class Foo() {
  const mutLambda: () -> void = () -> void;
}
